--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
 	"name": "textract",
 	"main": "./lib/textract",
 	"version": "0.0.0",
-	"description": "A short description of your package",
+	"description": "This package provide some little functionalities for very common text manipulation patterns",
 	"keywords": [
+		"refactor",
+		"text",
+		"javascript"
 	],
 	"activationEvents": ["atom-plugin:run"],
-	"repository": "https://github.com/atom/textract-atom",
+	"repository": "https://github.com/germtb/textract-atom",
 	"license": "MIT",
 	"engines": {
 		"atom": ">=1.0.0 <2.0.0"
